Modernize implementation